refactor: Store 도메인 리팩토링
* feat: validation 의존성 추가

* feat: 사용자 주변 점포 응답 DTO 추가
- 기존 공용 DTO와 분리하기 위함

* feat: 컨트롤러 계층 validation 도입

* feat: 요청 DTO validation 도입

* feat: 요청 DTO validation 도입 (LatLong)

* feat: 사용자 주변 점포 조회 DTO 변환 메소드 추가
- NearbyStoresResponseDto로 변환하는 메소드 추가

* feat: validation 예외에 대한 핸들러 추가

* refactor: 사용자 주변 점포 조회 로직 개선
- join 절 이용해 조회 쿼리 개선 및 N+1 문제 해결
- Store 조회 중복 코드 제거
- DTO 필드 타입 수정에 따라 getter 메소드 수정

* refactor: 점포 지도상 간략 조회 로직 최적화
- 최근 리뷰 사진 조회 과정에서 발생하던 N+1문제 해결
- 가장 최신의 리뷰 사진 5장을 응답하도록 구현
- StoreReviewPic Service & Repository 구현
- 간략 정보 응답 위한 별도 DTO 추가

* refactor: StoreMapSummaryDto 클래스명 변경
- StoreBasicInfoResponseDto로 변경, 상속받는 클래스에서 builder 사용 위해 SuperBuilder 도입

* refactor: 내가 등록한 점포 응답 Dto 분리
- 신규 Dto 클래스 생성에 따라 클래스 참조 이름 수정

* chore: swagger 관련 어노테이션 수정
- Tag -> Schema

* refactor: 점포 상세 정보 조회 로직 리팩토링
- 단골손님 표시 기능 임시 제거
- StoreBasicInfoResponseDto 상속받은 StoreDetailInfoResponseDto 클래스 생성
- 등록자 정보, 운영 시간 별도 객체로 분리
- 그 외 클래스명 변경에 따라 참조 이름 수정

* feat: 점포의 가장 최신 리뷰 3건 조회 구현
- 점포 상세페이지에서 보여질 가장 최신 리뷰 3건 반환
- StoreReviewResponseDto 리팩토링
- 조회 쿼리 최적화
  - 가장 최신 3건의 리뷰 조회 후 필요한 엔티티의 FETCH JOIN으로 N+1문제 해결

* refactor: Store 엔티티 수정
- 양방향 관계 설정 필드로 직접 PayMethod, OperatingDay 값을 넣도록 수정
- 점포 추가 메소드 로직 수정 (테스트 케이스도 수정)
- 관련 Enum 분리

* refactor: 점포 삭제 처리 로직 리팩토링
- 사용자가 등록한 점포가 아닐 경우 권한 없음 예외 처리 (관련 예외 코드 추가)
- 소프트 삭제 방식으로 삭제 처리 구현

* refactor: 점포 정보 수정 로직 개선
- 수정 관련 로직을 Store 엔티티로 이동
- Repository 조작 없이 양방향 연관관계 필드로 조작
- 양방향 연관관계에 `orphanRemoval = true` 옵션 추가

* refactor: StoreController 엔드포인트 수정
- RESTfulAPI에 더 알맞도록 수정

* refactor: 리뷰 조회 로직 개선
- StoreReviewService -> 읽기 전용의 StoreRepository에 의존하도록 수정
- StoreReviewController 엔드포인트 수정
- 리뷰 삭제 엔드포인트 storeId 매개변수 추가
- 그 외 코드 개선

* refactor: Store 엔티티의 양방향 연관관계 설정 수정
- 양방향 매핑 관계에서 값을 추가할 때 양쪽 엔티티 모두에 값을 설정하여 관계가 올바르게 설정되도록 보장

* refactor: 방문 인증 리팩토링
- 엔드포인트 수정 (RESTfulAPI에 더 적합하도록 수정)
- StoreVisitCertDto storeId 필드 제거
- StoreVisit